2024-05-24T16:22:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9227013304 # 302
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-24
* notice: last 14d: unq all: 6 26
* notice: prev accum: outdated-unq outdated-all / unq all: 366 748 / 386 775
* notice: next accum: outdated-unq outdated-all / unq all: 367 750 / 386 776
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2024-05-10] / [2024-05-24]

2024-05-24T08:23:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9220955072 # 301
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-24
* notice: last 14d: unq all: 6 26
* notice: prev accum: outdated-unq outdated-all / unq all: 366 748 / 385 774
* notice: next accum: outdated-unq outdated-all / unq all: 366 748 / 386 775
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-05-10 2024-05-24]

2024-05-23T16:25:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9211551280 # 299
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-23
* notice: last 14d: unq all: 6 26
* notice: prev accum: outdated-unq outdated-all / unq all: 365 746 / 384 773
* notice: next accum: outdated-unq outdated-all / unq all: 366 748 / 385 774
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2024-05-09] / [2024-05-23]

2024-05-23T08:23:25Z: