@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-11T16:22:05Z",
-  "count" : 2,
+  "timestamp" : "2024-05-25T08:23:11Z",
+  "count" : 1,
   "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
-  "uniques" : 2,
+  "count_decinc" : [ -1, +2 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "uniques_decinc" : [ -1, +2 ]
 }
