@@ -1,11 +1,11 @@
 {
   "count": 26,
-  "uniques": 6,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2024-05-11T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2024-05-13T00:00:00Z",
@@ -65,6 +65,11 @@
     {
       "timestamp": "2024-05-24T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-05-25T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
